[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/GUI/PauseLayer/PauseLayer.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.156863, 0.196078, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.407843, 0.219608, 0.423529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
anti_aliasing = false

[node name="PauseLayer" type="CanvasLayer"]
pause_mode = 2
layer = 11
script = ExtResource( 1 )
Main_Menu = "res://src/TitleScreen/MainMenu.tscn"

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 30
custom_constants/margin_left = 60
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_left = 60.0
margin_top = 30.0
margin_right = 260.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel/MarginContainer"]
margin_left = 16.0
margin_top = 30.0
margin_right = 184.0
margin_bottom = 89.0
size_flags_vertical = 4
custom_constants/separation = 1

[node name="Resume" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer" groups=[
"FocusGroup",
"Pause",
] instance=ExtResource( 2 )]
margin_right = 168.0
margin_bottom = 14.0
text = "Resume"

[node name="Restart" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 15.0
margin_right = 168.0
margin_bottom = 29.0
text = "Restart"

[node name="Options" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 30.0
margin_right = 168.0
margin_bottom = 44.0
text = "Options"

[node name="MainMenu" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 45.0
margin_right = 168.0
margin_bottom = 59.0
text = "Main Menu"

[node name="Exit" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 60.0
margin_right = 168.0
margin_bottom = 74.0
text = "Exit"
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
